fix: fix header font size and card layout spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-/* Put any custom CSS styles here.  */
-/* Be sure to delete the <style> tag in index.html if you want to use this stylesheet. */
 body {
   margin: 0;
   font-family: "Noto Sans", system-ui, -apple-system, BlinkMacSystemFont,
@@ -7,8 +5,9 @@ body {
     sans-serif;
   min-height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   background-image: linear-gradient(#f9fafb, #d2d6db);
 }
 
